Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10419

LFSCK fails to start, hangs systems.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.12.0, Lustre 2.10.5
    • Lustre 2.11.0, Lustre 2.10.2, Lustre 2.10.3
    • Soak performance cluster - Lustre version=2.10.2_4_gb151f34
    • 3
    • 9223372036854775807

      We do OSS failover, trigger LFSCK:

      
      

      lctl lfsck_start -M soaked-MDT0000 -s 1000 -t all -A{code]

      The lfsck start hangs, lfsck is not started, the clients wedge in state 'comp' the entire system wedges. I have dumped Lustre Logs from all MDS, attached. I have crash-dumped all the MDT nodes and the dumps are available on Spirit. lfsck_layout is unkillable.

        1. soak-11.lustre.log.gz
          2.22 MB
        2. soak-9.lustre.log.gz
          2.33 MB
        3. soak-10.lustre.log.gz
          2.57 MB
        4. soak-8.lustre.log.gz
          2.14 MB

            yong.fan nasf (Inactive)
            cliffw Cliff White (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: